# tuya-battery-monitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  main.go  run-tuya
src/: main.rs  system_info.rs
sysinfo-cli/: Cargo.toml
sysinfo-cli/src/: main.rs
